--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="nav__menu" id="nav-menu">
                     <ul class="nav__list">
                         <li class="nav__item">
-                            <a href="#hero" class="nav__link">Home</a>
+                            <a href="#home" class="nav__link">Home</a>
                         </li>
                         <li class="nav__item">
                             <a href="#about" class="nav__link">About</a>
